# rust_duplex_api_generation

client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: channel_listener.rs  generic.rs  lib.rs  receiver.rs  test_utils.rs
generic/: Cargo.toml
generic/src/: lib.rs  mock.rs
local_channels/: Cargo.toml
local_channels/src/: lib.rs  unbounded_mpsc.rs
protocol_types/: Cargo.toml
protocol_types/src/: generic.rs  lib.rs
protocol_util/: Cargo.toml
protocol_util/src/: base.rs  channel_allocator.rs  communication_context.rs  generic.rs  lib.rs  receiver.rs  sender.rs  spawner.rs  types.rs
protocol_util_macros/: Cargo.toml
protocol_util_macros/src/: input.rs  lib.rs  output.rs
server/: Cargo.toml
server/src/: main.rs
