[package]
name = "protocol_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol_util = { path = "../protocol_util" }
protocol_util_macros = { path = "../protocol_util_macros" }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.26"
pin-project = "1.0.12"
