[package]
name = "protocol_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"
pin-project = "1.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
async-mutex = "1.4"

[dev-dependencies]
tokio = { version = "1.25", features = ["rt", "macros"] }
assert-impl = "0.1"
