[package]
name = "protocol_util_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
itertools = "0.10.5"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version="1.0.105", features=["full", "extra-traits"] }
tempfile = "3.3"
