[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
itertools = "0.10"
pin-project = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
common = { path = "../common" }
local_channels = { path = "../local_channels" }
tower-http = { version = "0.3", features = ["cors", "catch-panic"] }
